Fixed various lint issues
Signed-off-by: Ricky Barrette <rickbarrette@gmail.com>